--- a/shared/computer/software/development/ソフトウェア開発.md
+++ b/shared/computer/software/development/ソフトウェア開発.md
@@ -220,3 +220,6 @@ https://tech.willgate.co.jp/entry/2024/04/01/184252
 人間の代わりに仕事してくれるソフトウェアを作る。注文であったり、事務処理であったり。
 
 ソフトウェア開発という活動と、そこで利用する技術のMAPが必要。範囲が大きい。
+
+開発に関わる役職
+https://x.com/0xpaulius/status/2010966174368944520?s=12
