--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -85,3 +85,6 @@ https://x.com/shiroku__mama/status/1963543241292136671?s=12
 子供には「頼られるのが気持ちいい」という感覚を育てるべき。社交やビジネスに対する適性。
 
 親二人だけでは育児の負担が大きすぎるので、工夫が必要。特に、幼児の安全性を容易に確保することができれば、目を離せる。
+
+男が育児に参加するようになったのは、単純に家族の人数が減ったからだと思う。親元から離れて暮らすことが多い。
+とはいえ最近は都会生まれの割合も増えてきているので、逆に親元で大きな家族を形成することも増えるかも。
