--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -33,3 +33,5 @@
 自慢話も本来は幸せのお裾分けなのかも。話し方が下手なだけで。
 
 ポジティブなのは幸せの要素の一つ。
+
+やりたいことは、基本的にこれまで達成してきたこと、ドーパミンで快楽が得られたことでしかない。やりたいことを作りたかったら、小さな成功を繰り返してドーパミンを求めるようにしたらいい。でも、ドーパミンは得られなくなったら不幸になる。
