--- a/shared/love/好意.md
+++ b/shared/love/好意.md
@@ -97,3 +97,7 @@
 好意と興味は近いところにある。好奇心がベース。奇妙でおかしいもの、違和感があるものに惹かれる。怖いものも気になる。
 
 信頼感、親近感、安心感、とか。
+
+相手が自分を好きか嫌いかと言うのは、近づこうとするか、遠ざかろうとするか。
+
+悪意はむしろ近づこうとしているので、嫌いとは別もの。恨み。
