--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -113,3 +113,6 @@ https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
   - 2分割 (裏拍)
   - 3分割 (3連符)
     - 2拍や4拍を3分割したりすることもある
+
+空手は体幹を動かさずに回転で打つ、ボクシングは体幹から動かす。黒人リズムも似たところがある。
+https://youtube.com/shorts/NxEwVb1Y-4o?si=Ocrh7b8EpR0IvnYc
