--- a/shared/sex/dating/恋愛.md
+++ b/shared/sex/dating/恋愛.md
@@ -10,3 +10,5 @@
 交際中は別に恋人ではないので、奪ったっていい。
 
 交際中にセックスしないのも選択の一つではあるけど、結婚してから初めてセックスするのはよくない。恋人として子供を作ることまで想定してから結婚した方が間違いが少ない。
+
+「最初の男になりたがる男、最後の女になりたがる女」って表現は面白いと思う。子どもを作って終わりの男と子どもを育てないといけない女の構図。現代では家族の人数が減って男も育児に参加することが多いけど。
