--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -24,6 +24,8 @@
     - 誘いを断っても嫌な顔をしない
 - (人と会ったとき)
   - 毎回名乗る: 相手が名前を忘れていても気まずくならないように
+- 歩くペースを合わせる
+- 食べるペースを合わせる
 
 ## その他
 
@@ -110,3 +112,5 @@
 
 気遣いを徹底しすぎると自分が疲れてしまう。
 そこで、全体的に手を抜くのではなくて、一部の人だけを特別扱いすると、それはそれで空気悪い。
+
+ペースを合わせるのも相手に気を遣わせないため。
