--- a/shared/communication/frameworks/emotion/examples/怒りの表現.md
+++ b/shared/communication/frameworks/emotion/examples/怒りの表現.md
@@ -28,3 +28,5 @@ https://x.com/genmeisui/status/1804507285794038152?s=46
 怒りと恐れは似ている。
 
 怒るのは怖がっている証拠だ。
+
+苛立ちは怒っているというより不快？でも単に不快なら表現する必要もないから怒りかも。
