--- a/shared/management/performance/効率を高める.md
+++ b/shared/management/performance/効率を高める.md
@@ -6,3 +6,7 @@
 具体的にどんな成果が欲しいか？
 問題をもっと絞れないか？
 じゃあどうしようか？
+
+効率化のパターンとして、処理するタイミングをずらす手がある。
+後回しにしてまとめて処理した方が速かったり、人が少なくて済んだり、あるいは先に処理した方がいい場合もある。
+ただ、まとめて処理する場合、エラー処理が複雑になって不良品が増えたりする場合もあって一長一短。
