--- a/shared/mood/happy/幸福感.md
+++ b/shared/mood/happy/幸福感.md
@@ -24,3 +24,8 @@
 ただ、幸せだと思っていても動かずに死んでいくなら同じことだ。
 
 幸せに「なりたい」からやるのではなく、幸せ「だから」やる。
+
+不幸を言い訳にしてはいけない。
+
+大切にされていると感じることでオキシトシンの幸せを感じる。
+セロトニンの幸せは外から動かすのが難しいけど、体が温まったり、腹が満たされたりすると幸せになる。それも外部からだとオキシトシンが優勢。
