--- a/shared/ethics/倫理.md
+++ b/shared/ethics/倫理.md
@@ -42,3 +42,7 @@ moral を善や道徳と比べると、倫理的という意味。
 倫理は権力を味方につけるための手段でしかない。
 
 ゲームや創作物を「不謹慎」とか言ってくる人が一番危ない。現実と空想の区別がついてなくて、空想を現実に持ち込んだような犯罪をする可能性がある。ストーカーとか。
+
+「倫理観がないやつは危機感がないだけの下等生物」『テラフォーマーズ』
+
+「足りねえな。『怒りを買い』、『殺される』という『危機感』が。」『テラフォーマーズ』
