--- a/shared/government/democracy/政治家を選ぶ.md
+++ b/shared/government/democracy/政治家を選ぶ.md
@@ -1,3 +1,6 @@
 代議士だけじゃなくて、社会活動家とか非公式で活動している人間も政治家の一種。
 
 民衆の不安を煽るだけで体を張ってない口だけ人間の言葉を信じたら馬鹿を見る。
+
+日本において、代議士の仕事は行政と立法である。まず、議員であれば立法は必須。まず立法で評価されるべき。
+大臣は立法もするけど、どちらかというと行政が重要。行政のトップ。
