--- a/shared/people/人柄.md
+++ b/shared/people/人柄.md
@@ -36,3 +36,10 @@
 
 感じ方を話すのに大事なのはどこを注視しているか。
 表現も大事だけど、まずは目の付け所が大事。どこが重要だと思っているか。
+
+感じ方というのは、その人の知覚。認識。認知。どこに注目して、どのくらいの解像度で見て、どのような歪みがあって、どれくらい覚えているか。
+
+感じ方が面白い人は解像度が高い。すごく細かいところを見ているし、視野も広いし、注目するところも人と違う。
+
+感じ方というのは感じたこと、思ったこと、考えたこと。
+考え方というのはそのプロセス。どうしてそう感じたか、どうしてそう思ったか、どうしてそう考えたか。
