--- a/shared/sports/ランニング.md
+++ b/shared/sports/ランニング.md
@@ -1,1 +1,4 @@
 走る時は酸素を取り込めるように姿勢良く、横隔膜で腹筋を引き上げて、猫背にならないようにする。手は軽く握って手首は固定する。腕は肩甲骨から、脚は腰から動かす。体幹に近い筋肉で駆動させる。
+
+強く足を蹴り出すには、脛側の力を抜いて、裏腿で踵から蹴り出さないといけない。脛側に力が入ると蹴り出すのではなく踏ん張って止まってしまう。
+走り出した後は足首を固定して、地面を蹴るのはつま先でも筋肉は腿側を使わないといけない。足首が緩まって爪先だけで蹴るとブレーキがかかる。
