--- a/shared/communication/media/language/枕詞.md
+++ b/shared/communication/media/language/枕詞.md
@@ -14,3 +14,5 @@
 
 「ぬばたまの」は美しく黒いものにかかる枕詞。
 「ぬばたまの黒髪山に〜」と言ったとき、「黒髪山」自体は固有名詞だけど、「ぬばたまの」が「黒髪」にかかることで「黒髪」を強調する。景色としての「黒髪山」と人の特徴としての「黒髪」を同時に語る。
+
+「ちょっと哲学的な話していい？」
