--- a/shared/perception/知覚.md
+++ b/shared/perception/知覚.md
@@ -20,3 +20,22 @@
 予測
 記憶の強さ
 どうしたいか
+
+100を見て10を知る人もいれば、100を見て100を知る人もいるが、まず10しか見てない人もいる。まず100を見るのが先。1を見て10を知るには知識と思考が必要。
+
+同じ、違う、
+古びている、新しい、
+などの評価軸もある。比較している。
+
+感じ方というのはまず比較があるのかも。
+ということは、考え方には何と比較するかが入ってくる。
+
+感じ方の解像度を上げるなら、まず事実の解像度を上げる。
+在り方。
+帰り道の家々もただの家として見るんじゃなくて、集合住宅で、外壁は何色で、何部屋あって、何階建で、駅近かどうか、とかを細かく見ていって、上の階は登るのが大変そうだな、とか思う。
+
+出来事の面白さもないわけではない。猪と熊が同時にコンビニに侵入してお互い見つめあってから後退りして出ていった、みたいな異常事態があると事実確認だけでも興味深い。でもそんな奇妙なことはそうそう起きない。
+
+どうなっているか、
+どのように遷移しているか、
+逆に変わっていないことはあるか、
