--- a/shared/sex/セックス.md
+++ b/shared/sex/セックス.md
@@ -88,3 +88,7 @@
 スキンシップの一種でもあるけど、大きな違いは粘膜や性器への接触。
 
 デートやスキンシップといった段階を踏むことが多い。
+
+2021年時点で女性の処女は20代前半が52%、後半が35%だけど、アンケートなので嘘をついている場合もある。
+男性は前半が46%、後半が35%であまり変わらない。
+30代になったらそこからあまり減らない。
