--- a/shared/human/being/well/愛情.md
+++ b/shared/human/being/well/愛情.md
@@ -33,3 +33,5 @@ https://gigazine.net/news/20230711-lonely-peoples-brains-work-differently/
 愛の観点では支配するなら愛とは言えないが、情の観点では情を持ちながら支配することもありうる。相手を守るための支配や監視。
 
 自分の愛情が強いから他の人には愛情がないように見えるのかも。
+
+相手に合わせて変化しようとするのも愛情。
