--- a/shared/communication/channels/talk/話.md
+++ b/shared/communication/channels/talk/話.md
@@ -66,3 +66,5 @@ talkができなくてもconversationはできる。talkがつまらなくても
 語れば語るほど感情も知識も豊かになっていく。グラデーションが細かくなって、名前がつくことで区別されていく。
 
 何かを語るには、ながら作業しない方がいい。
+
+語ることはまた考えることとは別のスキルが必要な気もする。
