--- a/shared/human/mind/精神の強さ.md
+++ b/shared/human/mind/精神の強さ.md
@@ -3,3 +3,5 @@
 周りに合わせていてもバランスを崩すようでは強いとは言えない。揺れる電車で立つのと同じ。支えがあると立ちやすい。
 
 心が強いというのは、どんな状況でも睡眠時間を7時間以上確保するという意味。
+
+そもそも慣れてないことに関してはメンタルとか関係ない。単に練習が足りてない。
