--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -113,3 +113,7 @@
 逆に、恋人であってもパートナーではなくペットになることはある。お金も稼がないし子供とも全く関わらないってことはまずないけど。
 
 恋人と、気になる人、交際相手、恋愛対象、は違う。デートしてるのはまだ恋人ではない。
+
+男性は女性を好きになるよりも女性に好かれるべきだ。
+好意を示したりして積極的に好かれることを目指すべきではあるけど、無理に追いかける関係は長続きしない。あくまでも相手に好かれるために好意を示す。
+追いかけるのは女性の方が持久力がある。
