--- a/shared/intimacy/誰かと親しくなる.md
+++ b/shared/intimacy/誰かと親しくなる.md
@@ -226,10 +226,13 @@ https://www.total-marriage.com/column/1644/
 - なんでもないことで連絡する
 - 目を合わせる
 - 手を振る
-- 歩み寄る
-- 走り寄る
-- 言動を真似する
-- 相手の好きなものを好きになる
+- 体を近づける
+  - 歩み寄る
+  - 走り寄る
+  - 近くの席に座る
+- 心を近づける
+  - 言動を真似する
+  - 相手の好きなものを好きになる
 
 遠慮しない。
 親しくなるとそもそも一般的には失礼になる。礼儀がいらなくなる。
@@ -245,3 +248,5 @@ https://www.total-marriage.com/column/1644/
 相手が引いてるのにこっちばっかり押しては迷惑。
 グイグイ行く前に、相手が引かないようにするべき。手順が違う。
 ただ、狩猟として考えると逃げる獲物を追うのは普通のことではある。微妙なところ。
+
+親しくなりたいなら、近くをキープするのは大事。
