--- a/shared/community/素直.md
+++ b/shared/community/素直.md
@@ -1,4 +1,4 @@
-速く伝えること。
+伝達が速いこと。速く伝えること。
 
 - 駆け引きしない
 - 遠回しに言わない
@@ -33,3 +33,5 @@
 相手の気分が悪くなると、速く伝わらない。抵抗が強くなる。
 
 素直というのは、コミュニケーションが「速い」ことで、でも単に雑にするだけだとむしろ伝わるのは遅くなる。相手の気分が悪くなると相手は聞き入れなかったりする。早く伝えるためには、結局ある程度の丁寧さは必要で、でも駆け引きとか遠回しでわかりづらい言葉は邪魔。
+
+素直とわがままの違いは何か。
