--- a/shared/society/tips/不満を伝える.md
+++ b/shared/society/tips/不満を伝える.md
@@ -11,3 +11,8 @@
 危険度の高い行動をとっている子どもに対して怒鳴って止めた場合、「大きな声出してごめん。危なかったから。」と謝る。
 
 「こうしたい」「こうしてほしい」を伝えるのは大事。
+
+不満を伝える場合でも、空気を悪くしたらいけない。相手の気分が悪くならないように伝える。結局、相手の気分が悪くなると伝わらないし、周りの気分も悪くなる。
+
+素直というのは、わがままではない。
+伝達が早いことだ。相手の気分を悪くしたら、伝わらない。
