--- a/shared/trust/reciprocity/恩.md
+++ b/shared/trust/reciprocity/恩.md
@@ -1,3 +1,5 @@
+# Thanks
+
 「借り」として早く返そうとするのか、「恩」として長く持っておくのか。
 
 即物的な対価を受け取らず、恩を売るのも一つの engagement の方法。
@@ -40,3 +42,5 @@ favor を恩とする場合がある。
 恩とか義理とかの概念は、記憶力が良くないと扱えない。忘れる。
 
 恩はhelpかなぁ。giftもありうる。返報の対象。貸し借り。
+
+恩は返させない。預けたままにしておく。
