--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -518,3 +518,9 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 できないことを「できない」と言える人が一番信頼できる。でも、そのように評価してない馬鹿が多い。
 
 謙虚と尊敬が信頼されるための基礎でもある。
+
+誰かに要求したいなら、まず信頼されないといけない。
+
+金は信頼や信用の代わりになる。
+
+恩は金の代わりになる。
