--- a/shared/lifestyle/beauty/美容.md
+++ b/shared/lifestyle/beauty/美容.md
@@ -25,3 +25,22 @@
 まずは肌を綺麗にする。
 
 体以外では、髪や髭、服が重要なところ。あとは目。
+
+- 水をたくさん飲む (できれば白湯)
+- フェイスラインをマッサージする
+- 産毛を剃る
+- 眉間をほぐす
+- 表情筋を動かす
+  - 割り箸をくわえて口角を上げる
+- 肌を保湿する
+- 皮脂を落としすぎない
+- 首までスキンケアする
+- しっかり寝る
+- 髪はドライヤーで乾かす
+- 頭皮をマッサージする
+- 唇を舐めない
+- 歯磨き、舌みがきする
+- たんぱく質をとる
+- 背すじを伸ばす
+
+産毛を剃るのは化粧水の効果も変わる。
