--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -181,3 +181,5 @@ discovery, 発見・探索も関連する。
 開発に必要なのは最良を目指すことであって、スクラムなどの開発手法も必ずしも最速でなくていい。
 
 規格が決まっているものはそれに向かって一直線に作るだけでいい。開発の余地がない。開発というよりは、規格通りに製造するだけ。
+
+自分が嫌いだからこそ変わろうとする面もある。
