--- a/shared/sex/dating/デート.md
+++ b/shared/sex/dating/デート.md
@@ -5,6 +5,8 @@
 デートは meeting の一種で、会話や体の接触、コミュニケーション、感情表現などを伴う。
 
 デートの目標はスキンシップ。セックスの前座。
-手を繋ぐとか、ハグするとか、キスするとか。
+手を繋ぐとか、ハグするとか、キスするとか。最終的にはセックス。
+
+恋人を選ぶためにデートする。
 
 datingがいわゆる恋愛に近いか。
