--- a/shared/story/物語.md
+++ b/shared/story/物語.md
@@ -157,3 +157,5 @@ https://www.bbc.com/japanese/features-and-analysis-44286945
 - 悲劇（レメディ）: バッドエンド
 
 物語の中で死人が多いと、単純に登場人物も多くなって誰が誰だかわかりにくくなる。
+
+narrativeというと、talkよりも筋道のある物語の構造や様式に焦点を当てている。
