--- a/shared/singing/tips/歌に抑揚をつける.md
+++ b/shared/singing/tips/歌に抑揚をつける.md
@@ -119,3 +119,5 @@ https://youtu.be/ossqU_PajA4?si=_qLcHlHCXEOZgNOk
 すいちゃんはメロを裏声というか強いウィスパーボイスで歌う感じ。
 
 歌のために、最低でも3段階、あるいは2段階と少しの強弱が必要。メロディーとサビとラスサビ。まず3段階の安定した強弱をつけて、さらにアクセントを乗せる。強弱は横隔膜で圧をかけて安定させて、アクセントは横隔膜を下腹で下から太鼓のように叩く感覚。
+
+曲としてのアクセントだけでなく、言葉やフレーズを区切るためのアクセントもある。
