--- a/shared/family/marriage/浮気.md
+++ b/shared/family/marriage/浮気.md
@@ -10,3 +10,7 @@
 ただ、残念ながら浮気する人は一人を好きになっても当然浮気する。誰か一人を特別扱いしないからこそ浮気するのだし。
 
 「そりゃ乳出されたら一応触るだろ礼儀として」『悪いが私は百合じゃない』
+
+浮気は恋人の概念で、恋愛の概念とは違う。
+
+男の場合、女が浮気していると自分の子じゃない可能性がある。
