--- a/shared/human/being/well/愛情.md
+++ b/shared/human/being/well/愛情.md
@@ -35,3 +35,5 @@ https://gigazine.net/news/20230711-lonely-peoples-brains-work-differently/
 自分の愛情が強いから他の人には愛情がないように見えるのかも。
 
 相手に合わせて変化しようとするのも愛情。
+
+愛情ってめんどくさいものだ。
