--- a/shared/intimacy/友人.md
+++ b/shared/intimacy/友人.md
@@ -213,3 +213,6 @@
 むしろ恋人がベースで、子どもを作らない親しい人が友人かも。
 
 友人は、誰かを紹介してもらうのが特に重要。友人を経由して、友人の友人を知るために友人がいるのかも。
+
+友人は、気遣いが必要ない人がいい。気を抜けないのは友人じゃないかも。そうなると気遣いの文脈かも。一緒にいると気を抜けて、気分が良い人。
+恋人には手を抜かなくても、友人には手を抜ける。面倒を見なくていい。
