--- a/shared/mood/happy/幸福感.md
+++ b/shared/mood/happy/幸福感.md
@@ -29,3 +29,7 @@
 
 大切にされていると感じることでオキシトシンの幸せを感じる。
 セロトニンの幸せは外から動かすのが難しいけど、体が温まったり、腹が満たされたりすると幸せになる。それも外部からだとオキシトシンが優勢。
+
+ドーパミンは達成感で、水準を下げにくい。
+
+達成感だけが幸せではない。
