--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -103,3 +103,7 @@
 「感謝ノート」を書いて、誰かからしてもらってことで気分が良くなったのを記録していくと、自分でもそれを他人に応用できる。
 
 「がんばれ」「もっとやれる」みたいな期待は承認ではあるけど、重すぎて気分を下げることもある。
+
+なぜ音楽を聴いたり歌ったりして気持ちよくなるか。
+
+一緒に同じ曲を歌うのは親近感と音楽としての気持ちよさがある。
