--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -64,3 +64,8 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 音楽の習得はハーモニー、リズム、メロディ、の順。
 
 音楽的には、一音でも成立する和音、ハーモニーがまずあって、次にレガートを構成する一部としてリズムがある。まずはこの二つが重要で、メロディーはそこまで重要ではない。でも伴奏と合わせる場合は伴奏のメロディーとハーモニーを構成するので、メロディーは綺麗にたどれた方がいい。
+
+楽譜 (score) と演奏 (performance) がある。合わせて一曲。
+楽譜には歌詞も含まれる。
+
+楽譜が同じでも演奏が違ったらまた違う曲になる。
