--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -375,3 +375,6 @@ https://x.com/ggnka_icha/status/1810274912759918858
 > 『狂乱令嬢ニア・リストン』
 
 意見を聞いてくれない、尊重してくれない、みたいなのは子ども扱いされてるのかな？
+
+尊重は価値の文脈とはまた違う気がする。
+ただ、結果としては価値を認めるような面もある。
