--- a/shared/sports/ランニング.md
+++ b/shared/sports/ランニング.md
@@ -2,3 +2,5 @@
 
 強く足を蹴り出すには、脛側の力を抜いて、裏腿で踵から蹴り出さないといけない。脛側に力が入ると蹴り出すのではなく踏ん張って止まってしまう。
 走り出した後は足首を固定して、地面を蹴るのはつま先でも筋肉は腿側を使わないといけない。足首が緩まって爪先だけで蹴るとブレーキがかかる。
+
+肩に力が入っていると疲れやすい。呼吸が悪くなる。
