--- a/shared/sex/セックス.md
+++ b/shared/sex/セックス.md
@@ -92,3 +92,5 @@
 2021年時点で女性の処女は20代前半が52%、後半が35%だけど、アンケートなので嘘をついている場合もある。
 男性は前半が46%、後半が35%であまり変わらない。
 30代になったらそこからあまり減らない。
+
+男のセックスはドーパミンを得るもので、女のセックスはオキシトシンを得るもの。
