--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -117,3 +117,6 @@
 男性は女性を好きになるよりも女性に好かれるべきだ。
 好意を示したりして積極的に好かれることを目指すべきではあるけど、無理に追いかける関係は長続きしない。あくまでも相手に好かれるために好意を示す。
 追いかけるのは女性の方が持久力がある。
+
+恋人は必ずしも友人のように気を抜ける存在でなくてもいい。
+ただ、友人のように気を抜ける恋人の方が幸せではある。
