--- a/shared/communication/social/対人コミュニケーション.md
+++ b/shared/communication/social/対人コミュニケーション.md
@@ -9,3 +9,9 @@
 喜びや楽しみを共有できるとコミュニケーションがうまい。
 
 人前で腕を組まない。拒否しているように感じる。
+
+狭義のコミュニケーションは対人のものを指す。
+
+対人のコミュニケーションが苦手だと、接している相手からは「その人のことが」苦手なように見えてしまう。
+コミュニケーションを避けるということは、人を避けるということだ。
+人と関わるなら、コミュニケーションへの苦手意識は克服しないといけない。
