--- a/shared/human/body/muscle/training/筋肉を大きくする.md
+++ b/shared/human/body/muscle/training/筋肉を大きくする.md
@@ -5,15 +5,18 @@
 ## コツ
 
 - 成長に合わせて負荷を増やす
-- プロテインだけに頼らない
-- 食事の内容を工夫する
+- 運動量を増やす
+  - プロテインだけに頼らないで食事もしっかり摂る
   - 炭水化物を抜かない
-  - たんぱく質を増やす (体重10kgあたり16-20gが目安)
   - 新鮮な脂肪分を摂る (魚、ナッツ、オリーブオイル、など)
   - 水分を摂る
   - 塩分を摂る
-- 睡眠をとる
-- 頑張りたい日はクレアチンやカフェインでブーストする
+  - 特に頑張りたい日はクレアチンやカフェインでブーストする
+- 筋肉を減らさない
+  - たんぱく質を増やす (体重10kgあたり16-20gが目安)
+- 筋肉を休ませる
+  - 睡眠をとる
+  - 同じ部位を鍛える場合は回復する期間を空ける
 
 ## 負荷を増やす方法
 
@@ -27,3 +30,6 @@
 https://youtu.be/MQLp90Qv4gc?si=SUm-VgQyPcKkIlYw
 
 筋肉を大きくするのは、体にとって優先順位が低い。しっかり栄養を取らないと筋肉にならない。
+
+筋肉を大きくするためには、回復させる時間と栄養が必要。
+脂肪を落とすだけなら毎日走ったりするのもいいけど、筋肉を大きくするならちゃんと計画を立てたほうがいい。
