--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -19,10 +19,6 @@
 
 似ている人とは共感しやすい。
 
-悪い体験を共有すると、反感を持たれやすい。
-
-また、体験の共有を拒否する、反感を持つのも反感を持たれやすい。
-
 傾聴も共感が重要。
 むしろ相手の話に共感するために傾聴してるというべきかも。
 
@@ -135,7 +131,4 @@
 
 共感は、似ていると親近感を覚えやすい、の一部かも。
 
-「わかるよ」が同感。
-「そうなんだ」が共感。
-
-同意する必要はない。相手の考え方や感じ方を認める。
+共感は尊重の一種。
