--- a/shared/respect/empathy/反感.md
+++ b/shared/respect/empathy/反感.md
@@ -28,3 +28,7 @@
 体験を共有しても気持ち悪いだけで、反感を持ってしまう。
 
 認知のズレは経験や文化、価値観や優先順位、五感の違い、偏見、情報量、などに左右される。
+
+悪い体験を共有すると、反感を持たれやすい。
+
+また、体験の共有を拒否する、反感を持つのも反感を持たれやすい。
