--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -378,3 +378,7 @@ https://x.com/ggnka_icha/status/1810274912759918858
 
 尊重は価値の文脈とはまた違う気がする。
 ただ、結果としては価値を認めるような面もある。
+
+相手に目を向けること。
+
+目を合わせたり、微笑んだり、手を振ったり、といったジェスチャーは尊重を示す意味もある。
