--- a/shared/trust/tips/警戒するべき相手.md
+++ b/shared/trust/tips/警戒するべき相手.md
@@ -5,3 +5,5 @@
 急激な変化を狙う人は信用できない。あくまでも変化は小さく積み重ねるべき。その結果として大きな変革が起こる。
 
 知識を隠す人というのは、常に自分の利益のために動いている。
+
+皮肉は表面上褒めているようだけど、相手から評価されていないので、逆にこちらも相手を信頼してはいけない。
