--- a/shared/engagement/praise/感謝.md
+++ b/shared/engagement/praise/感謝.md
@@ -21,8 +21,8 @@
 全くの他人に助けてもらったら、まずは名前を聞いて相手を識別した方がいい。
 名前を呼んで感謝する方が効果的。
 
-`ユァ ウェゥ カm` の三音に比べてどういたしましての 7 音の長さどうにかならんか。
-`サnk ユゥ` の 2 音とありがとうございますの 10 音の差もよくない。
+"You're welcome."の3音に比べて「どういたしまして」の7音の長さどうにかならんか。
+"Thank you."の2音と「ありがとうございます」の10音の差もよくない。「ありがとう」でも5音。
 
 感謝することと評価を下げることは両立する。
 どれだけ評価が低くても相手の行動を促したいなら感謝することだ。
@@ -52,3 +52,5 @@
 迷惑をかけた、と伝えるのも感謝。
 
 感謝されないということはやめてほしいということなのでやめる。
+
+感謝を伝えることは、信頼を示すこととも関連がある。今後も期待しています、の意。
