--- a/shared/society/tips/不満を伝える.md
+++ b/shared/society/tips/不満を伝える.md
@@ -16,3 +16,14 @@
 
 素直というのは、わがままではない。
 伝達が早いことだ。相手の気分を悪くしたら、伝わらない。
+
+基本的に不快さを態度で示すと空気が悪くなる。
+しかし、あまりに不快なら不快さを示さないといけない場合もある。
+
+不快さを態度で示しても、空気が悪くならないようにする。
+
+- ウィットやユーモアを交えて、空気を悪くせずに指摘する
+- 指摘して空気が悪くなったら自分で改めて盛り上げる
+
+空気を悪くする人には、不快さを態度で示さないといけない。空気を守る。
+ただ、態度で示すことによって空気が悪くなるので、自分で戻さないといけない。
