--- a/shared/trust/tips/信頼を示す.md
+++ b/shared/trust/tips/信頼を示す.md
@@ -5,6 +5,25 @@
 
 ただ、できないことを期待すると葛藤が生じる。
 
+## Good
+
+- 感謝を伝える
+- 報酬を増やす
+- 頼み事をする
+- 相談に乗ってもらう
+- 二人きりで話す
+- 秘密を打ち明ける
+- 素顔や弱みを見せる
+
+## Bad
+
+- 監視する
+- 相手を尊重しない
+- あれこれと口出しする
+- 意見を聞き入れない
+
+## メモ
+
 逆に、監視は「信頼していない」というメッセージを伝える。
 
 必要以上に監視したり、尊重せずに手出しするのは信頼していないことを表してしまう。
@@ -28,3 +47,7 @@
 アドバイスするのは相手に聞かれたときか、「アドバイスしてもいい？」と聞いてからにする。
 
 言葉ではなく、態度で示す。ただ、その方が難しい。
+
+感謝を伝えることは、信頼を示すこととも関連がある。今後も期待しています、の意。
+
+報酬は払うことよりも、増やすことが重要。
