--- a/shared/trust/信頼度.md
+++ b/shared/trust/信頼度.md
@@ -1,7 +1,7 @@
 1. 警戒: 害がある
 2. 安心: 害がない
 3. 期待: 利がある
-4. 実績: 恩がある
+4. 感謝: 恩がある
 
 ## 警戒: 害がありそう
 
@@ -36,7 +36,7 @@
   - いざというときに守ってくれそう
 - 自分の考え方や感じ方を理解している
 
-## 実績: 恩がある
+## 感謝: 恩がある
 
 利益を得た実績がある。
 
