--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -1,5 +1,7 @@
 # Humor
 
+滑稽。
+
 いわゆる「ユーモア」とは周りを笑わせるような振る舞いのこと。
 あるいは「おかしな人」から来ている。
 
@@ -253,3 +255,13 @@
 
 「面白いものは狂気を感じるほどの非効率から生まれるので、効率を求めれば求めるほどつまらないゴミが効率的に生産される」
 https://x.com/tomatoha831/status/2008862737355689986?s=20
+
+失敗を笑いに変えるのはユーモアの基本でもある。
+おかしな人だと思ってもらう。好奇心をくすぐる。
+でも、違和感は警戒心につながることもある。そこはバランス。おかしな人だけど、害はないと思ってもらう。
+
+ユーモアのベースにあるのは人間性や個性。
+個性という異物を社会に馴染ませる。
+
+ユーモアと笑いは違うけど、ユーモアによって笑いが生まれることはある。
+そもそも違和感や異物感は緊張感を生み出す。それを緩和して、社会に馴染ませる必要がある。
