--- a/shared/trust/信頼度.md
+++ b/shared/trust/信頼度.md
@@ -8,6 +8,7 @@
 負の期待。
 
 - 襲われそう
+  - 孕まされそう
 - 病気をうつされそう
 - 尊重されない
   - 否定されそう
@@ -18,8 +19,8 @@
 
 最低限の期待。
 
-- 病気にならない
 - 襲われない
+- 病気をうつされない
 - 気分が悪くならない
 - 尊重されている
   - 否定されない
@@ -46,3 +47,10 @@
   - 盛り上げてくれた
 - 元気にしてもらった
 - 贈り物をもらった
+
+## メモ
+
+とりあえず警戒しなくていい、安心、というのが最低限の信頼。
+でも記憶や印象に残るほどではない。
+
+本能的に顔とか体が好みだと、孕まされてもいいわけだから、信頼のハードルが下がる。
