--- a/shared/trust/安心感を与える.md
+++ b/shared/trust/安心感を与える.md
@@ -1,6 +1,7 @@
 - 笑顔
 - 些細な気遣い
-- 相手を褒める
+- 清潔感
+- 自己開示
 
 安心させる。
 
@@ -127,3 +128,8 @@ https://diamond.jp/articles/-/118539
 
 どうして話しかけたかを伝えると警戒されにくい。
 行列に並んでる人に「これってどうして並んでるんですか？」って聞くのは目的が明らかで、暗黙的に目的がわかっている。
+
+安心感を与えるだけでは印象に残らない。良い人、優しい人、で終わる。
+期待される、信頼されることで相手はまた得があると思って近づいてくる。興味を持つ。
+
+安心させたら、そこから一歩踏み込むのが大事。
