--- a/shared/aesthetics/美しさと怪しさ.md
+++ b/shared/aesthetics/美しさと怪しさ.md
@@ -31,7 +31,7 @@
 
 美とは、鑑賞する者に好ましい、心地よい、優雅で洗練された印象を与える。
 
-美しさの中に潜在的な危険や脅威を感じさせることもある。
+美しさの中に潜在的な危険や脅威を感じさせることもある。畏敬のような。
 
 完全な調和や均衡の中にあるわけでなく、ある種の緊張や異質さを含む場合がある。
 謎めいた不気味さ、怪しさとも関連する。
@@ -63,3 +63,7 @@
 醜いのは怪しい。
 
 「人が理解できないものこそ怪獣なんだ。彼等は常に人の理の外にいる」（スパロボY）
+
+怪しいというのは、情報の文脈なのかもしれない。
+
+美しさが荘厳さに繋がることがある。
