--- a/shared/trust/信頼度.md
+++ b/shared/trust/信頼度.md
@@ -1,41 +1,19 @@
-1. 警戒: 害がある
+1. 警戒: 害がありそう
 2. 安心: 害がない
-3. 期待: 利がある
+3. 期待: 利がありそう
 4. 感謝: 恩がある
 
 ## 警戒: 害がありそう
 
 負の期待。
 
-- 襲われそう
-  - 孕まされそう
-- 病気をうつされそう
-- 尊重されない
-  - 否定されそう
-  - 批判されそう
-  - 軽蔑されそう
-
 ## 安心: 害がない
 
 最低限の期待。
 
-- 襲われない
-- 病気をうつされない
-- 気分が悪くならない
-- 尊重されている
-  - 否定されない
-  - 批判されない
-- 言葉が通じる
-
 ## 期待: 利がありそう
 
 何らかの利益がありそう。
-
-- 本能的に好み
-- お金を持っている
-- 助けてくれそう
-  - いざというときに守ってくれそう
-- 自分の考え方や感じ方を理解している
 
 ## 感謝: 恩がある
 
@@ -52,5 +30,3 @@
 
 とりあえず警戒しなくていい、安心、というのが最低限の信頼。
 でも記憶や印象に残るほどではない。
-
-本能的に顔とか体が好みだと、孕まされてもいいわけだから、信頼のハードルが下がる。
