--- a/shared/trust/安心感を与える.md
+++ b/shared/trust/安心感を与える.md
@@ -1,21 +1,22 @@
-- 笑顔
-- 些細な気遣い
-- 清潔感
-- 自己開示
+# 安心感を与える
 
 安心させる。
 
-どうやって警戒を解くか。
+「害がない」と思われないといけない。
+この段階では減点方式。
 
-1. 笑顔で挨拶する
-2. 目を合わせる
-3. 名乗る
-4. 名前を聞く
-5. 名前を繰り返し呼んで、覚える
-6. 積極的に自己開示して、話題を探る
-7. 感情表現して、共感を促す
+## ポイント
 
-https://diamond.jp/articles/-/118539
+- 清潔感
+- 笑顔
+- 挨拶
+- 些細な気遣い
+- 自己開示
+- 言葉が通じる
+- 相手を尊重する
+- 近くにいて何もしない
+
+## 警戒されやすい振る舞いを避ける
 
 次のような警戒されやすい振る舞いは避ける。
 
@@ -53,6 +54,20 @@ https://diamond.jp/articles/-/118539
 - その他
   - 交友関係が怪しい
   - 宗教や事業を熱心に勧める
+
+## その他
+
+どうやって警戒を解くか。
+
+1. 笑顔で挨拶する
+2. 目を合わせる
+3. 名乗る
+4. 名前を聞く
+5. 名前を繰り返し呼んで、覚える
+6. 積極的に自己開示して、話題を探る
+7. 感情表現して、共感を促す
+
+https://diamond.jp/articles/-/118539
 
 警戒をとくためには、やるべきことよりもやってはいけないことの方が多い。
 
@@ -133,3 +148,6 @@ https://diamond.jp/articles/-/118539
 期待される、信頼されることで相手はまた得があると思って近づいてくる。興味を持つ。
 
 安心させたら、そこから一歩踏み込むのが大事。
+
+まずは「害がない」「敵でない」のが最低限かも。
+敵でないことを示す一番簡単な方法は、害を与えずにずっと近くにいること。
