--- a/shared/trust/警戒心.md
+++ b/shared/trust/警戒心.md
@@ -2,11 +2,26 @@
 
 不信感。
 
+- 襲われそう
+- 傷つけられそう
+- 盗まれそう
+- 騙されそう
+- 孕まされそう
+- 付きまとわれそう
+- 事故や犯罪に巻き込まれそう
+- 病気をうつされそう
+- 否定されそう
+- 批判されそう
+- 軽蔑されそう
+- いじめられそう
+- 仲間はずれにされそう
+- など
+
 相手に害があっても防げるなら、警戒する必要はなくなる。
 逆に、弱者は多少害があるだけでも大きな影響がある。
 
-まずは「害がない」「敵でない」のが最低限かも。
-敵でないことを示す一番簡単な方法は、害を与えずにずっと近くにいること。
+強い人は優しい。
+わざわざ警戒する必要も、出し惜しみする必要もない。
 
 相手を警戒してたら、自由にはさせられない。
 まずは相手への警戒をとく。自分も相手も。
@@ -23,13 +38,6 @@
 
 一言で警戒心と言っても様々。
 
-- 傷つけられるのではないか
-- 盗まれるのではないか
-- 騙されるのではないか
-- 襲われるのではないか
-- 付きまとわれるのではないか
-- 事故や犯罪に巻き込まれるのではないか
-- 病気をうつされるのではないか
-- など
-
 害される危険性に晒されて生きてきた人は警戒心が強くなりがち。
+
+本能的に顔とか体が好みだと、孕まされてもいいわけだから、信頼のハードルが下がる。
