--- a/shared/education/mentoring/助言.md
+++ b/shared/education/mentoring/助言.md
@@ -1,5 +1,7 @@
 # 助言
 
+助言は批判である。
+
 助言するのではなく、相手に気づかせる。
 
 良い答えよりも良い問いを与える。
@@ -37,8 +39,6 @@
 「こうした方がいい」ではなく、「こういう状況ではどうしたらいい？」と考えてもらう。
 
 自分のことは自分が一番わかっているが、局所的には自分よりも他人が知っていることもある。
-
-助言は批判だ。
 
 助言は目の前の問題への対処と根本的な原因への対処とで二つ答えられるといい。
 
