--- a/shared/communication/frameworks/assertion/主張.md
+++ b/shared/communication/frameworks/assertion/主張.md
@@ -125,3 +125,5 @@ https://www.mamoru-kun.com/tips/assertiveness/
 どれだけ正しくても伝わらなければコミュニケーションとしては失敗している。相手が受け入れられるような伝え方や言い方にすると成功しやすい。
 
 主張を相手に受け入れてもらうことは実のところ重要ではない。
+
+信頼されれば、主張や要求は通りやすい。
