--- a/shared/love/interesting/興味.md
+++ b/shared/love/interesting/興味.md
@@ -18,3 +18,9 @@
 違和感は好奇心の基礎。
 
 興味の基礎は親近感と違和感。
+
+悪いところを探すのも興味ではある。
+愛がないと悪いところばかり見つかる。完璧な人などいない。
+
+興味があるから好きになるのか、好きになったから興味があるのか。
+たぶんどっちも。相乗効果がある。
