--- a/shared/popular/人に好かれる.md
+++ b/shared/popular/人に好かれる.md
@@ -38,3 +38,13 @@
 - ギャップを演出する
 
 まずは興味を持ってもらうのが好感の第一歩。
+
+人に好かれるには、恩を売るのが一番。
+気分を良くする、困った時に助ける、贈り物をする、など。
+
+親近感とかは話が盛り上がりやすいから気分が上がりやすいだけ。
+
+会って少し話しただけで期待感があるような人は好かれやすい。
+
+人に好かれる人は、期待感がある人。
+ワクワクするような人。会うだけで気分が上がる人。
