--- a/shared/popular/好感度.md
+++ b/shared/popular/好感度.md
@@ -1,5 +1,7 @@
 # Favor
 
+favorは「恩恵」と捉えることもある。信頼があること。良い期待があること。
+
 ステータスとは別に、本人が好かれているかどうか。
 
 信頼とほぼ同じものと考えられる。
@@ -33,3 +35,6 @@ favor には「特別扱いする、贔屓する」意味がある。
 
 好感というのは基本的に親近感と近い。
 ただ、そもそも興味がないと「一緒だね」とか言っても「ふーん」で終わる。この違いはどこからくるか。
+
+信頼と同じものかも。
+安心感を与えるのも、好感を与えるのも信頼の延長かも。
