--- a/shared/trust/安心感を与える.md
+++ b/shared/trust/安心感を与える.md
@@ -15,6 +15,7 @@
 - 言葉が通じる
 - 相手を尊重する
 - 近くにいて何もしない
+- 堂々として落ち着いている
 
 ## 警戒されやすい振る舞いを避ける
 
@@ -30,6 +31,7 @@
 - 会話が成立しない
   - 返事をしない、反応しない
   - 相手の話を否定する
+  - 批判する
   - 相手の話に割り込む、話を遮る（間違えて遮っても「どうぞどうぞ」すれば大丈夫）
   - 話を聞いていない
   - 意見を押し付ける、説教する
@@ -151,3 +153,8 @@ https://diamond.jp/articles/-/118539
 
 まずは「害がない」「敵でない」のが最低限かも。
 敵でないことを示す一番簡単な方法は、害を与えずにずっと近くにいること。
+
+まずは身なりが大事。
+汚れてなくて、前科がありそうな顔でもない。顔が怖かったら笑う。笑っても怖かったらさらに工夫が必要。
+
+堂々として落ち着いている人は相手も落ち着ける。
