--- a/shared/trust/警戒心.md
+++ b/shared/trust/警戒心.md
@@ -9,10 +9,12 @@
 - 孕まされそう
 - 付きまとわれそう
 - 事故や犯罪に巻き込まれそう
+- 前科がありそう
 - 病気をうつされそう
 - 否定されそう
 - 批判されそう
 - 軽蔑されそう
+- 無視されそう
 - いじめられそう
 - 仲間はずれにされそう
 - など
@@ -41,3 +43,5 @@
 害される危険性に晒されて生きてきた人は警戒心が強くなりがち。
 
 本能的に顔とか体が好みだと、孕まされてもいいわけだから、信頼のハードルが下がる。
+
+警戒心はあるけど期待感もある、ということもある。
