--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -528,3 +528,13 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 信頼されると何が嬉しいか。
 
 信頼はポイント式で、使うと減る。でも貯めるだけでは意味がない。
+
+他人に期待しない、信頼しないことで失望しないようにするのは消極的すぎる。
+
+ある程度情報は公開しないといけないけど、全てを公開しない方が期待感は高まる。ミステリアス。イベント感。少しずつ盛り上げる。
+
+話題性。人が集まっていることでも期待感がある。行列のできる店は美味しそうに見える。
+
+自分自身は期待感に踊らされないようにする。
+期待感は幻想に過ぎない。
+好奇心と想像力。
