--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -1,9 +1,76 @@
 # 期待感
 
+Hope.
+
 何らかの利益がありそうな感じ。
+何か良いことが起きそうな感じ。
 
 - 性的な魅力がある
 - お金を持っている
 - 助けてくれそう
 - いざというときに守ってくれそう
 - 自分の考え方や感じ方を理解している
+- 勢いがある
+- ゴールが近づいている
+- 存在感がある
+
+信頼感とは期待感のことだ。
+ドキドキワクワクする感じ。
+
+不用意に期待感を与えすぎると失望される可能性も高い。
+
+実績を積む感覚と近いところはある。
+
+ビジネスや仕事では以下の四つが揃っているといい。将来性。
+
+- 理想がある
+- 覚悟を決めている (今の自分に戻れなくてもいい)
+- 道筋を立てている
+- 実際に継続している
+
+期待されている人は支援も受けやすい。
+
+「こいつ何考えてんだ」ってのも期待感。
+
+期待感はあるけどやってない人は口だけの人。
+口だけの人は区別しないといけない。
+
+言葉ではなく行動を見るべき。
+
+想像できないこと、予想できないことには期待感を抱きやすい。
+「え？」を引き出す。
+
+サプライズも期待感を与えるためのもの。
+
+うまく間をとることで期待感を抱かせる。
+「大事なことがあります。それは...XXXです。」みたいに次が重要だよ、と振ってから間を置くとか。
+
+ポジティブなことを話すのも期待感に繋がる。
+
+勢いは一つの要素かも。
+勢いがあるのは期待感がある。
+
+どうしたいか。
+どうしてほしいか。
+を考えるといい。
+
+自信がある人には期待感がある。
+でも自信に根拠があるとは限らない。
+
+https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
+
+「溜め」が期待感を煽る。
+
+カウントダウンも「溜め」の一種。
+
+期待感を語ることで期待感を共有する。
+
+わからない方が期待感がある。
+
+- 断片的な情報のみを開示する
+- 段階的に情報を開示する
+- ストーリーを伝えることで当事者感を出す
+- 特別感を演出する
+- 希少価値を訴求する
+- 情報の信頼性を高める
+- 好奇心を刺激する
