--- a/shared/observation/観察.md
+++ b/shared/observation/観察.md
@@ -258,3 +258,14 @@ inspection は明確な目的というか基準がある。
 動的な変化を見るか、静的な状態を見るか。
 
 観察によって、反応を予測する。思い通りの反応を引き出せる。
+
+- 何がどうなったか
+- 何があったか
+- 何がなくなったか
+- 誰がどうしたか
+- 誰がいたか
+- 誰がいなくなったか
+- いつ
+- どこで
+
+見て、聞いて、触って、嗅いで、食べる。
