--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -12,6 +12,7 @@ Hope.
 - 自分の考え方や感じ方を理解している
 - 勢いがある
 - ゴールが近づいている
+- うまくいく条件が揃っている感じがある
 - 存在感がある
 
 信頼感とは期待感のことだ。
@@ -74,3 +75,7 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 - 希少価値を訴求する
 - 情報の信頼性を高める
 - 好奇心を刺激する
+
+事後に「行けばよかった」という人が多いイベントは事前告知が足りない。ちゃんと期待感を煽るのが大事。
+
+正論には期待感がない。
