--- a/shared/intimacy/清潔感.md
+++ b/shared/intimacy/清潔感.md
@@ -21,3 +21,5 @@ https://x.com/womanhumour/status/1819723107973873958
 格下に見られないのが大事。
 
 シャツはできるだけこまめに買い替えた方が色や匂いもないし襟も伸びてないので綺麗。古いのは買った店のリサイクルに出せばいいし。
+
+清潔感があるだけじゃなくて、期待感があるといい。
