--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -141,3 +141,26 @@ loveもworkも利害関係は別で、careにあるのかも。
 人にめんどくさいと思うのはその人に対して情がないから。情があったら「やれやれ」する。
 
 知り合いの中でも自分のことを好きじゃない人はどうなってもいい。
+
+情の根っこは「特別扱いする」ことだと思う。
+「リソースやエネルギーを集中する」ことでもある。
+
+遠くの人がどれだけ入れ替わっても気にしない。
+
+人間を単機能で見ていると代替可能になりやすい。
+
+機能が同じでも「違う」という感覚は情に近い。
+
+人間も、自分が見ている部分だけでも、全く同じというのはあまりない。
+
+自分が相手に期待している領域が小さいほど、「代替可能」になりやすい。
+
+相手に求めている仕事や役割の大きさが情につながる部分もあるかも。
+期待する役割が大きくなるほど、代替が難しくなる。
+
+両親にすら何も期待してない、みたいな人だと他人にはもっと情がなくなりがち。愛着障害。
+
+相手を特別扱いする、代替できないものとして考える。
+だからこそ離別に関心があって、失われないようにしようとする。
+
+情がないからこそ、誰も特別扱いせず公平に扱える面もある。
