--- a/shared/collaboration/organization/組織の規模.md
+++ b/shared/collaboration/organization/組織の規模.md
@@ -18,3 +18,6 @@
 
 20人くらいの組織ならサル山と同じくらいの感覚で特に統治システムがなくてもトップが全体に目を配れる。
 多くても100人くらいになると限界が来て、群れから逸れる個体が増える。群れから逸れた個体は、別の群れを作って元の群れと対立したり、死にやすくなったりする。群れの中でも争いが増える。
+
+人は情で動くけど、組織が大きくなるとトップの情だけで動かすのは難しい。
+トップが幹部に情を示して、幹部は部下に、さらにその部下もそのまた部下に、というふうに階層構造を作るくらい。
