--- a/shared/devotion/情熱.md
+++ b/shared/devotion/情熱.md
@@ -53,3 +53,6 @@ Passive と同じ語源。
 
 表現者か、競技者か。
 自らの芸術、美学を極めようとするか、他人に勝ろうとするか。
+
+情熱を注げるのは、それが特別だからかも。「俺にはこれしかない」と思えるかどうか。
+どんな仕事でもすぐできてしまうと情熱を注ぐまでもない。エネルギーを集中しなくてもできてしまう。
