--- a/shared/human/being/well/幸福.md
+++ b/shared/human/being/well/幸福.md
@@ -269,3 +269,5 @@ https://www.sustainability-hub.jp/column/about-personal-relationships/
 
 - 見守られている
 - 理解されている
+
+脳の反応としての精神的な幸せと、経済状況や健康状態などの現実的な幸せがある。内的か外的か。
