--- a/shared/leisure/examples/karaoke/カラオケで場を盛り上げる.md
+++ b/shared/leisure/examples/karaoke/カラオケで場を盛り上げる.md
@@ -73,3 +73,20 @@
 声が小さい人は普通に盛り下がるのであんま歌わない方がいい。
 
 誰かを一人で歌わせて盛り上げないのはどうなのか。情がないのではないか。
+
+## 気遣い
+
+- のど飴をあげる
+- ファーストペンギンになる
+  - ハードルを下げる
+- (誰かが歌っているとき)
+  - 体でリズムをとる
+  - 合いの手を打つ
+  - 手拍子で盛り上げる
+- (誰かが歌い終わったとき)
+  - 拍手する
+  - 褒める
+- (人が入ってきたとき)
+  - 席を詰める
+  - 席を替わる
+  - 自分が歌っていても挨拶する
