--- a/shared/love/愛.md
+++ b/shared/love/愛.md
@@ -1005,3 +1005,9 @@ loveとgoodの概念は近い。
 本能的に好きな人以外はどうでもいい、という人は人を愛せていない。
 
 愛がないと悪いところばかり見つかる。完璧な人などいない。
+
+愛は対象が失われても続く。
+過去を振り返って良いところを探せる。
+
+死体蹴りは愛がない。
+死んでまで悪いところを探す必要はない。
