--- a/shared/trust/恩恵.md
+++ b/shared/trust/恩恵.md
@@ -9,6 +9,7 @@
 
 実利的、経済的なものだけじゃなくて、精神的、感情的なものも含まれる。
 
+- 幸せになれる
 - 奢ってくれる
 - 人を紹介してくれる
 - 仕事を紹介してくれる
@@ -18,3 +19,7 @@
 - など
 
 人によっては刺激が少ないのも恩恵ではある。落ち着いて付き合える。安心できる。
+
+どんな恩恵を期待するか。
+
+相手を幸せにする人は、当然幸せにしてくれる恩恵がある。
