--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -79,3 +79,9 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 事後に「行けばよかった」という人が多いイベントは事前告知が足りない。ちゃんと期待感を煽るのが大事。
 
 正論には期待感がない。
+
+「幸せになれる」という期待。
+
+自慢話も期待感を煽ろうとしているのかも。
+つまらない自慢話は、期待感を煽れていない。
+「芸能人に会った」みたいな話であれば「本物はどうだった？」みたいな話ができたりする。きっかけは芸能人でも、話している人の感じ方や考え方を聞けば掘り下げられる。
