--- a/shared/care/気遣い.md
+++ b/shared/care/気遣い.md
@@ -114,3 +114,6 @@
 そこで、全体的に手を抜くのではなくて、一部の人だけを特別扱いすると、それはそれで空気悪い。
 
 ペースを合わせるのも相手に気を遣わせないため。
+
+態度に裏表があるのも、気遣いの延長。
+まぁ、人によって態度を変えるのは気分が悪いけど、誰にでも建前で良い態度を続けている人は単に気遣いをしている人。
