--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -540,3 +540,10 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 好奇心と想像力。
 
 相手の希望や期待感が信頼につながる。
+
+1. 良い印象に残る
+2. 印象に残らない
+3. 悪い印象に残る
+
+悪印象は覆すのが難しいので、それなら印象に残らないほうがいい。
+ただ、何度も会う人じゃないなら一か八かでも印象に残ったほうがいい。
