--- a/shared/trust/恩恵.md
+++ b/shared/trust/恩恵.md
@@ -5,7 +5,7 @@
 相手の希望がベース。
 
 恩恵がないと好かれない。
-恩恵があるからこそ近づいてくる。
+なんらかの恩恵を期待しているからこそ近づいてくる。
 
 実利的、経済的なものだけじゃなくて、精神的、感情的なものも含まれる。
 
@@ -23,3 +23,6 @@
 どんな恩恵を期待するか。
 
 相手を幸せにする人は、当然幸せにしてくれる恩恵がある。
+
+ステータスは分け前を期待してる。
+金持ちとか、芸能人の友人がいるとか。
