--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -85,3 +85,9 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 自慢話も期待感を煽ろうとしているのかも。
 つまらない自慢話は、期待感を煽れていない。
 「芸能人に会った」みたいな話であれば「本物はどうだった？」みたいな話ができたりする。きっかけは芸能人でも、話している人の感じ方や考え方を聞けば掘り下げられる。
+
+言動が期待感にどうつながるか。
+
+愛情を示すと期待感が上がりやすい。
+特別扱いすることは、より大きなエネルギーを自分のために割いてくれるということ。
+それに好きになってくれれば自分のために動いてくれる確率が上がる。
