--- a/shared/sex/dating/tips/恋愛感情.md
+++ b/shared/sex/dating/tips/恋愛感情.md
@@ -1,14 +1,18 @@
 ## 脈あり
 
 - 二人で会おうとする
+- 日程を具体的に提示する
 - 話が続く
 - なんでもないことで連絡する
+- 他にも席があるのに隣に座る
 - (女性)
   - 他の人に対するより高い声を出す
+  - 体に触れるギリギリまで近寄る
 
 ## 脈なし
 
 - 短文やスタンプで返す
+- なんなら返さない
 
 女性からのスキンシップはむしろ脈なしかも。
 でも接しないギリギリまで体が近いのは脈ありかも。
@@ -24,3 +28,5 @@
 相手が友人だと思っているのに、恋人になろうとしてアプローチするのは逃げられる可能性が高い。
 
 男性の方が恋愛として捉えてる範囲は広いと思う。
+
+好意と恋愛感情は違うけど、基本的には好意がないと恋愛感情にはならない。
