--- a/shared/sex/恋人.md
+++ b/shared/sex/恋人.md
@@ -120,3 +120,6 @@
 
 恋人は必ずしも友人のように気を抜ける存在でなくてもいい。
 ただ、友人のように気を抜ける恋人の方が幸せではある。
+
+セックスして子どもを作りたいだけで気を遣わないといけない相手だと、セックス以外は友人を優先する場合がある。
+子どもは作ったけどずっと外に出て仕事やら趣味やらを優先する、という人は友人のような気の置けない関係が築けてない。
