--- a/shared/communication/media/language/rhetoric/比喩.md
+++ b/shared/communication/media/language/rhetoric/比喩.md
@@ -10,3 +10,7 @@
 
 比喩も感じ方なのかな。でも表現かも。
 比喩は表現ではあるけど、感じたことから比喩を展開させるのでそもそも感じ方も重要。
+
+比喩は、抽象的な印象を具体的な表現にしてくれる。
+
+ころさんがぐるぐる絡まったホースを見て「川崎ジャンクションやん」って言ってたのは面白かった。ホースの形をJCTに例えるだけでなく、「川崎」をつけてさらに具体的にしているのもポイントが高い。
