--- a/shared/popular/tips/女性にモテたい.md
+++ b/shared/popular/tips/女性にモテたい.md
@@ -22,3 +22,6 @@ https://x.com/prada_46/status/1811005372855108064
 通常は、「自分より上」の男性を好む。
 下に見られるとモテない。
 体を鍛えたり、ユーモアを見せたりするべき。
+
+リスクを取る人は期待感が亜ある。
+また、そもそも女性は出産がリスクなので、同様にリスクを負ってくれる人を求めるのかも。
