--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -56,3 +56,9 @@
 興味がない人に好意を向けられるのはどうか。女性だと嫌な人もいる。
 
 愛がなくても愛を示すことはできる。
+
+愛は好意というよりも興味の面が強い。
+相手を知ろうとしている。特に良いところ、好きなところを探している。
+
+相手の印象とか気づいたことを相手に伝える。
+褒めるのはやりすぎかも。
