--- a/shared/trust/creditability/約束.md
+++ b/shared/trust/creditability/約束.md
@@ -18,3 +18,9 @@
 プロはとにかく「やります」でいい。できるかどうかわからなくてもいい。ただ、期限と報酬の交渉はその後。優先順位が低かったら「2年後なら空いてます」でもいいし、手間がかかるなら「30億円になります」でもいい。
 
 社交の基礎は約束を忘れないこと。スケジュール帳でもGoogle Calendarでもいいけど特にスケジュールは必ず管理する。
+
+守れない約束を曖昧に誤魔化すよりも、リスクをとって約束するほうが期待される。
+約束というのは、何があっても守るものだ。
+守れなかった時は謝る。
+
+約束しないと期待されない。
