--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -91,3 +91,10 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 愛情を示すと期待感が上がりやすい。
 特別扱いすることは、より大きなエネルギーを自分のために割いてくれるということ。
 それに好きになってくれれば自分のために動いてくれる確率が上がる。
+
+約束しないよりは守れなくても約束したほうが期待される。嘘は手間がかかる。
+
+自分にとって価値がない人の期待は裏切っても別にいい。恨まれなければ困らない。でも恨まれるほど手ひどい裏切りは避けたほうがいい。
+期待を裏切ることよりも、恨まれることと期待されないことを避ける。
+
+「次はどんな話が聞けるんだろう」
