--- a/shared/choice/選択.md
+++ b/shared/choice/選択.md
@@ -38,3 +38,6 @@
 選択肢のいくつかは危ない道だったとしても、大抵は遠回りだったり行き止まりだったりするだけで悪くもない道が多い。
 
 「軽々しい選択や蛮勇は決して誇らしいものではない。真に誇るべきなのはあなたのような真に重い人生を歩んできた者が本当に重い選択をした時なのです。」『ひぐらしのなく頃に』
+
+- 何を選んだか
+- どうして選んだか
