--- a/shared/lifestyle/beauty/容姿.md
+++ b/shared/lifestyle/beauty/容姿.md
@@ -1,6 +1,17 @@
+# Appearance
+
 英語で言うと appearance が全般的な外見のことで、looks は生まれ持った顔などの見た目のこと。
 
 「容姿を褒めるのは性的に見ているからだ」という説があったけど、流石に被害妄想だと思う。
 それなら猫を可愛いとか言うのも性的に見ているからということになってしまう。
 
 「醜い」には対義語がない。強いて言えば「見やすい」か。「美しい」の対義語は「怪しい」。
+
+おしゃれの順序。
+
+1. 清潔で無難な服
+2. 髪
+3. アクセサリー
+4. 個性的な服
+
+いきなりおしゃれな服を買おうとしない。
