--- a/shared/mood/happy/praise/褒められる.md
+++ b/shared/mood/happy/praise/褒められる.md
@@ -1,3 +1,10 @@
+「嬉しいです」「ありがとう」で受け取るのが基本。
+逆に、それで間違ってたら相手が変なので、切っちゃってもいい。
+
+- 本音の褒め: 素直に「嬉しい」「ありがとう」
+- 建前の褒め: オーバーにボケて軽く受け取る
+- 皮肉の褒め: 謙遜する
+
 褒められたい場合、「これどうだった？」と自分から意見を求めに行く。
 
 褒められたら、大きなリアクションで受け取る。
@@ -5,3 +12,7 @@ https://youtu.be/EOIQlVc95uI?si=RMSPd8iTKHherdPZ
 
 褒められたら否定しない。
 例えば「よくできた」と褒められたら「いえ、まだまだです」ではなく、「ありがとうございます、でももっと精進します」でいい。
+
+自分でも満足していないと褒められても受け取れないことがあるけど、相手を否定してはいけない。
+
+「モテそうだね」とかは大体建前なので「そうですね、100人待ちですよ」とかオーバーに軽く受け取る。
