--- a/shared/mood/happy/praise/褒める.md
+++ b/shared/mood/happy/praise/褒める.md
@@ -1,3 +1,13 @@
+- すぐに褒める
+- 陰でも褒める
+- 相手が納得できるように褒める
+- 生まれつきのものよりも工夫を褒める
+- まずは相手が赤ちゃんだと思ってなんでも褒める
+- 褒めるだけでなく、質問で掘り下げる
+- 嘘をつかない
+- 相手を喜ばせようとしない
+- できれば同じ内容を使いまわさない
+
 褒め、賞賛、称賛、感嘆、賛美
 
 褒めるよりも、感謝する方が当事者目線。
@@ -83,11 +93,6 @@ engagementのためではなく、respectのために褒めるべき。
 
 褒めるタイミングも大事。
 
-- 具体的に褒める
-- タイミングを見極める
-- 嘘をつかない
-- できれば同じ内容を使いまわさない
-
 何のために褒めるか。
 相手を喜ばせるためではある。行動を強化する。あるいはモチベーションやエンゲージメントを高める行為でもある。
 
@@ -125,6 +130,6 @@ pleasure.
 
 他人と比べるより、過去のその人と比べる。
 
-陰でも褒める。
+説得力のある褒め。
 
-褒めるだけじゃなくて、質問で掘り下げる。
+相手を喜ばせようとするのではなく、自分が喜ぶ。
