--- a/shared/human/body/muscle/training/tips/部位ごとに鍛える.md
+++ b/shared/human/body/muscle/training/tips/部位ごとに鍛える.md
@@ -5,6 +5,7 @@
 ## 体幹（内腹筋、下腹部）
 
 - プランク
+- リバースプランク
 - ドローイン
 - デッドバグ
 - レッグレイズ
@@ -21,6 +22,14 @@ https://youtu.be/YDQgDbHPTFA?si=gMgkA9G6KK1locN1
 息を吐きながら横隔膜をとにかく上に持ち上げる、腹を凹ませる練習をドローインという。
 
 歌いながらプランクや腕立てとか。
+
+## 腹筋（外腹筋）
+
+- 上体起こし
+- 立ち腹筋
+
+仰向けになるタイプの腹筋は腰が床から離れると腰を痛めやすい。
+腰の下に手を置いて、手を腰で床に押し付ける感覚を保ったまま行う練習をするといい。
 
 ## 腕
 
