--- a/shared/intimacy/友人.md
+++ b/shared/intimacy/友人.md
@@ -216,3 +216,7 @@
 
 友人は、気遣いが必要ない人がいい。気を抜けないのは友人じゃないかも。そうなると気遣いの文脈かも。一緒にいると気を抜けて、気分が良い人。
 恋人には手を抜かなくても、友人には手を抜ける。面倒を見なくていい。
+
+言葉の裏を読まないといけないのは気遣い。気の置ける関係になるには、わざわざ言葉の裏を読まなくてもいいように直接的に言い合えるようにする。
+
+友人は親しいというか、気を抜ける人。気を遣わなくていい人。
