--- a/shared/intelligence/知性.md
+++ b/shared/intelligence/知性.md
@@ -46,6 +46,11 @@ learning, thinking, training あたりは知性の関連だと思う。
 - 観察力
 - 注意力
 - 集中力
+- 深く考える力
+- 長く考える力
+- 多角的に考える力
+- 広く見る力
+- 細かく見る力
 
 同じものを違うように見る、違うものを同じように見るのは知性が低い。
 
