--- a/shared/game/優劣.md
+++ b/shared/game/優劣.md
@@ -15,3 +15,8 @@
 
 何かが「できない」のはそれだけ「劣っている」ということ。
 ただ、「劣っている」としても総合的に「勝てる」場合がある。優劣と勝敗は別。
+
+優劣はworkか？機能的な見方。評価している。
+
+マウントって結局なんだろう？上下とか優劣で人を扱うこと？ボスのように振る舞うこと？優位に立とうとする？勝とうとする？
+優位というのは、優れているというよりも、勝とうとする感じ。戦おうとしている。
