--- a/shared/mood/気分を上げる.md
+++ b/shared/mood/気分を上げる.md
@@ -12,6 +12,7 @@
   - 相手のために品のある言動を選ぶ
   - 相手のために身なりを整える
   - 相手の話したことややったことを覚えている
+  - 誰かから必要とされる
 - 相手に理解されていると感じる
 - 安心する
 - 相手を信頼している
@@ -32,6 +33,7 @@
 - 相手に集中して話を聞く
 - 幸せな人を見る
 - 応援される
+- 自分の行いが報われる
 
 気分を上げる、機嫌をとる。
 
@@ -110,3 +112,5 @@
 一緒に同じ曲を歌うのは親近感と音楽としての気持ちよさがある。
 
 緊張している時に声をかけるとかもいい。
+
+人から必要とされること、報われることは気分が良い。
