--- a/shared/popular/人気になる要素.md
+++ b/shared/popular/人気になる要素.md
@@ -11,3 +11,25 @@ Mitch Prinstein の『POPULAR』では、次の２つを人気になる要素と
 人気のためには品性が大事。何を言うかよりも何を言わないか。
 
 好感度とステータスは、その人の状態を見るか、状況を見るか。本人を見るか、周囲を見るか。
+
+人が集まる人
+
+- リーダー
+  - 哲学がある。
+  - 考え方をはっきりと示せる。
+  - 説得力がある。
+  - 真似をしない。
+  - 媚びない。
+  - 信頼される。
+- アイドル
+  - 応援される。
+  - 嫉妬されない。
+  - 嫉妬しない。
+  - マウンティングしない。
+
+結局、哲学者タイプは自分が成功してることで、人が真似する。真似される、リーダータイプ。憧れ。科学者とは違う。
+逆に、アイドルは成功しても許される、むしろ応援したくなる。愛される。
+
+あとは単純におこぼれを求めて人が集まることもある。食い物にされる成功者。撒き餌タイプ。脇がゆるすぎる。
+
+複数のタイプを兼ね備えているとなおいい。
