--- a/shared/voice/training/exercises/発声練習.md
+++ b/shared/voice/training/exercises/発声練習.md
@@ -33,3 +33,6 @@ kはきれいに発音しにくい。
 - 喉に力を入れないで、声帯を伸ばす
 
 発声練習は筋トレであって、そのまま歌うわけではない。
+
+練習の基本は発声練習だけど、あくまでもやりたいのは音楽。発声練習がもっとも効率的であっても、曲の練習はモチベーション維持に役立つ。
+それに、曲の練習では時間の制限がある。たとえば音程を2度変えるにしてもリズムに合わせて素早くしないといけない。
