--- a/shared/voice/声の属性.md
+++ b/shared/voice/声の属性.md
@@ -6,3 +6,5 @@
 - 声色（雑音の混ざり具合、響き）
 
 トーンというと単にピッチよりは声色もある程度混じったイメージ。明るさや強さも含む。
+
+声の強さというと声量も含まれるので、重さというのがいい。息漏れの量。これも声帯の閉じ具合というと強く閉じたら声は硬くなるので単に息漏れ基準でいいと思う。軽い声は多少息が漏れている。
