--- a/shared/communication/channels/talk/話.md
+++ b/shared/communication/channels/talk/話.md
@@ -70,3 +70,12 @@ talkができなくてもconversationはできる。talkがつまらなくても
 何かを語るには、ながら作業しない方がいい。
 
 語ることはまた考えることとは別のスキルが必要な気もする。
+
+冬に間違って屋根のないカフェで集合してしまって、
+「風強すぎる」
+「クソさみぃ」
+というのはfeelingだけど、
+「クリスマスツリーがブンブン頭振ってる」
+「誰もいねえ」
+みたいなのは出来事。でも出来事も補足した方が解像度を上げられる。
+これは出来事自体が面白かったパターンの話し方。
