--- a/shared/feeling/感じ方.md
+++ b/shared/feeling/感じ方.md
@@ -1,3 +1,12 @@
 # Feeling
 
 感じ方のベースにあるのはまず快不快の感覚。良いか悪いか。ここにいるべきか、離れるべきか。
+
+一番良かったのは？
+
+- 何を感じたか
+  - 視覚: 光
+  - 聴覚: 音
+  - 嗅覚: 匂い
+  - 触覚: 引っかかり
+  - 味覚: 味
