--- a/shared/popular/tips/女性にモテたい.md
+++ b/shared/popular/tips/女性にモテたい.md
@@ -25,3 +25,5 @@ https://x.com/prada_46/status/1811005372855108064
 
 リスクを取る人は期待感が亜ある。
 また、そもそも女性は出産がリスクなので、同様にリスクを負ってくれる人を求めるのかも。
+
+女性が試し行動したり待ちに回ったりするのは、「お前がやれ」って上から目線じゃなくて、そういう男性が良いものだから。男性かくあるべし。尽くしてくれる男。リスクを取る、責任を一緒に負ってくれる男。
