--- a/shared/voice/training/tips/口を開ける.md
+++ b/shared/voice/training/tips/口を開ける.md
@@ -48,3 +48,5 @@
 顎を動かさずに唇と舌を大きく動かすストレッチ。まだ発音は気にしなくていい。
 
 口を大きく開けると、喉を狭めて無理に高い声を出すことができなくなる。練習としては大きく開けたほうがいい。本番では口に響かせやすいように口を開けすぎない。
+
+舌の動きが悪いと口内を広げた時に正しい子音の位置に舌が届かない。
