--- a/shared/war/牽制.md
+++ b/shared/war/牽制.md
@@ -9,3 +9,5 @@
 使いやすいのは「そんなこと言わなくてもいいんじゃないの？」とか。
 
 相手が攻められないようにあらかじめ力を見せておくのが牽制。相手を楽させないとともに、お互いに無駄な争いを避ける抑止力にする。
+
+見てから対応するつもりなら、牽制は必要ない。誘いはあってもいい。
