--- a/shared/health/exercise/tips/筋肉をつける.md
+++ b/shared/health/exercise/tips/筋肉をつける.md
@@ -4,6 +4,6 @@
 筋肉は消費が大きいのでそもそも必要なくなると落ちやすい。
 継続しないと意味がない。
 
-HIITでウォーミングアップする。
-
 無酸素運動は筋肉も消費する。必ず筋肉をつける食事とセットで行うべき。
+
+筋肉を鍛えるなら、筋トレというより単に筋肉に力を入れるだけでもいい。自重よりさらに負荷は低いけど。
