--- a/shared/communication/media/language/語彙.md
+++ b/shared/communication/media/language/語彙.md
@@ -12,3 +12,5 @@
 
 開いたクラスと閉じたクラスという分類もある。
 開いたクラスというのは、新しい語が追加されやすいグループ。逆に閉じたクラスは新しい語がほぼ追加されない。「〜です」「〜ます」「〜は」とかの語彙的に安定したところ。日本語だと無駄に語尾が追加されることもあるけど。
+
+語彙があれば、表現そのものの面白さを追求することもできる。でも表現の面白さは解釈や視点の面白さでもある。
