--- a/shared/love/tips/愛を示す.md
+++ b/shared/love/tips/愛を示す.md
@@ -5,7 +5,8 @@
   - 体を近づける
     - 近くの席に座る
   - 電話やメールで連絡する
-  - 考え方や感じ方を知ろうとする
+  - 相手のことを知ろうとする
+    - 考え方や感じ方を知ろうとする
   - 変化に気づいて指摘する
   - 相手の言葉を拾う
   - 相手の感情を言い当てる
@@ -62,3 +63,5 @@
 
 相手の印象とか気づいたことを相手に伝える。
 褒めるのはやりすぎかも。
+
+相手のことを知ろうとする、質問する、は愛を示している。
