--- a/shared/people/人柄.md
+++ b/shared/people/人柄.md
@@ -43,3 +43,5 @@
 
 感じ方というのは感じたこと、思ったこと、考えたこと。
 考え方というのはそのプロセス。どうしてそう感じたか、どうしてそう思ったか、どうしてそう考えたか。
+
+「なんでそんなとこ覚えてんねん」みたいな話をするのは、話してるのは事実なんだけど、結果として感じ方の個性が出ている。
