--- a/shared/sex/dating/tips/恋愛感情.md
+++ b/shared/sex/dating/tips/恋愛感情.md
@@ -11,6 +11,7 @@
 
 ## 脈なし
 
+- 相手から質問されない
 - 短文やスタンプで返す
 - なんなら返さない
 
@@ -30,3 +31,7 @@
 男性の方が恋愛として捉えてる範囲は広いと思う。
 
 好意と恋愛感情は違うけど、基本的には好意がないと恋愛感情にはならない。
+
+毎日通話してるみたいなのはかなり親しい。
+
+好意があっても恋愛感情でない場合はある。
