--- a/shared/thinking/問い.md
+++ b/shared/thinking/問い.md
@@ -153,3 +153,9 @@
 詳しく知ろうとすること、情報を得ることの基礎。
 
 同じ「なぜ」でもきっかけと決め手を分けて考える。
+
+話す能力や書く能力、聞く能力の基礎になるのは問う能力。
+
+疑問に思うこと。不思議に思うこと。
+
+問いはやはり思考。しかし、思考を観察や知覚にも使える。
