--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -220,3 +220,5 @@
 言葉の裏を読まないといけないのは気遣い。気の置ける関係になるには、わざわざ言葉の裏を読まなくてもいいように直接的に言い合えるようにする。
 
 友人は親しいというか、気を抜ける人。気を遣わなくていい人。
+
+信頼しているから友人というわけでもない。上司や同僚を信頼することもある。やはり気遣いの文脈かも。
