--- a/shared/knowledge/知識.md
+++ b/shared/knowledge/知識.md
@@ -187,3 +187,7 @@
 知識は既存の知識から誰かが推論した結果でもある。応用の知識まで知っていると、わざわざ新しく考えなくても直接その知識を使って考えられる。
 
 知識は全てを網羅できるわけじゃないけど、思考の基盤になる。知識が全くないと全く考えずに動くことになる。なんなら基礎的なルールを破ったり、致命的なリスクを踏み破ったりする。
+
+考えが散逸しているとまだ知識として使えない。
+考えや情報を体系化、構造化して使いやすくしたのが知識。
+「使う」ためには目的意識が必要。何に使うかで、どのように構造化するかも変わってくる。
