--- a/shared/sex/dating/tips/恋愛感情.md
+++ b/shared/sex/dating/tips/恋愛感情.md
@@ -35,3 +35,7 @@
 毎日通話してるみたいなのはかなり親しい。
 
 好意があっても恋愛感情でない場合はある。
+
+恋愛感情と好意は違うけど、基本的に恋愛感情は好意の延長線上にある。恋愛感情があって好意がないということはない。intimacy.
+
+好意の中でスキンシップとか、二人きりになるのは恋愛感情にもなる。
