--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -547,3 +547,8 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 
 悪印象は覆すのが難しいので、それなら印象に残らないほうがいい。
 ただ、何度も会う人じゃないなら一か八かでも印象に残ったほうがいい。
+
+人にお金を払わない人は、人に期待してない。家電とかが好き。お金が手に入った時に、ものを買う。
+
+人に期待してない。
+人を信頼してない。
