--- a/shared/communication/media/language/言葉を強調する方法.md
+++ b/shared/communication/media/language/言葉を強調する方法.md
@@ -1,10 +1,19 @@
+言葉:
+
+- 装飾を増やす
+- 繰り返す
+
 音声:
 
+- 間をとる
 - ゆっくり喋る
 - 大きな声で喋る
+- キーを変える
 
 文字:
 
 - フォントを大きくする
 - 空白を挟む
 - 句読点を置く
+
+形容詞も副詞も、形容表現、装飾は、強調のためにある。装飾が少ないと抑揚が弱くなる。
