--- a/shared/care/友人.md
+++ b/shared/care/友人.md
@@ -226,3 +226,7 @@
 信頼しているから友人というわけでもない。上司や同僚を信頼することもある。やはり気遣いの文脈かも。
 
 男女の友情は「ない」と言っている人は、女性に気を遣う人。
+
+気を使わなくてもいい、というのは、気を抜いても空気が悪くならない、ということ。
+
+友人以外には気遣いが必要。
