--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -2,7 +2,7 @@
 
 Hope.
 
-何らかの利益がありそうな感じ。
+何らかの恩恵がありそうな感じ。
 何か良いことが起きそうな感じ。
 
 - 性的な魅力がある
@@ -14,6 +14,10 @@ Hope.
 - ゴールが近づいている
 - うまくいく条件が揃っている感じがある
 - 存在感がある
+- 責任を負う
+- 説得力がある
+- 目立つ
+- 約束して、それを守る
 
 信頼感とは期待感のことだ。
 ドキドキワクワクする感じ。
@@ -98,3 +102,7 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 期待を裏切ることよりも、恨まれることと期待されないことを避ける。
 
 「次はどんな話が聞けるんだろう」
+
+一緒にいて良いことが起きそうな期待、あるいは実績。
+
+目立ちたくない、期待が重い、責任が重い、と考えるひとには期待しづらい。
