--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -176,3 +176,5 @@ https://x.com/torotakulove/status/1980816263103541501?s=61
 
 打算だけで好感がほんとにないというか、生理的に無理なときは結局長続きするのが大変。どうしても無理な人はいる。
 政略結婚とか強い使命感があれば相性が悪くても関係を維持できることもある。
+
+社交では安心感を与える。長く付き合うことで信用に変わる。
