--- a/shared/sex/dating/tips/恋愛感情.md
+++ b/shared/sex/dating/tips/恋愛感情.md
@@ -14,6 +14,9 @@
 - 相手から質問されない
 - 短文やスタンプで返す
 - なんなら返さない
+- 曖昧に先延ばしされる
+  - 「考えとくね」
+  - 「行けたら行く」
 
 女性からのスキンシップはむしろ脈なしかも。
 でも接しないギリギリまで体が近いのは脈ありかも。
