--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -125,3 +125,13 @@
 
 ホイッスルボイスは特殊。
 声帯というよりは、声道全体でうまいこと鳴らす感じ。
+
+中低音を綺麗に出して、そのまま少しずつ高音も同じように出す。
+
+まずは低い音から高い音まで同じように歌わないといけない。声帯だけを伸ばす。
+https://youtu.be/WqCmaGega3Y?si=wkxAh2OGiQgsmFfD
+
+声帯の力を抜いて、声帯の伸縮だけで一番低い音から2度高い音に上げるのが基礎の練習。慣れたらもっと伸ばす。
+最初は声帯を伸ばしても鳴るように強い息で。声量の調整は後でいい。
+
+声帯に力が入ると伸びにくくなる。
