--- a/shared/learning/独学.md
+++ b/shared/learning/独学.md
@@ -3,6 +3,8 @@
 独学は効率が悪い。
 第三者からも指摘を受けたほうが学習しやすい。
 
+独学だと、どの方法が正しいのか、幾つも方法論を見比べて自分で判断しないといけない。
+
 ただ、自分でも学ぶ姿勢を見せないと見捨てられやすい。
 
 独学は間違った方法に慣れてしまうこともある。
