--- a/shared/feeling/感じ方.md
+++ b/shared/feeling/感じ方.md
@@ -12,3 +12,10 @@
   - 味覚: 味
 
 否定、肯定、同意、不同意、なんかも感じ方ではある。
+
+感じたことを、どうしてそう思ったか考えることで自分の感じ方の傾向がわかる。
+
+何かを感じるには、基準が必要。基準があるから、大きいとか、軽いとか、着込んでいるとか、言える。
+
+https://youtu.be/Ub5CTXX24RM?si=yCoq02EHU9_K8gnl
+これくらい見ているものに対して感じたことを一生喋れるようにしたい。
