--- a/shared/respect/empathy/共感.md
+++ b/shared/respect/empathy/共感.md
@@ -136,3 +136,26 @@
 「これ可愛くないー！？」に「かわいいね！」は同感。「いいじゃん、よかったね！」は共感。
 
 相手に良いことがあれば「よかったね」、相手に悪いことがあれば
+
+肯定するだけじゃなくて、相手の感じ方を言葉にする。
+
+「よかったね」
+「おいしいね」
+「嬉しいね」
+「楽しいね」
+「嫌だったね」
+「困ったね」
+「つらかったね」
+「痛かったね」
+「怖かったね」
+「殺してやりたいね」
+
+うーん、「大変だね」はまた違う気がする。共感というより、事実？
+
+感じ方を言葉にすることでそう感じるようになる面もあるかも。特に感情を言葉にするのが苦手な子どもとか。
+
+「でっか」
+「あっつ」
+
+とかも共感かも。
+あまり過度な感情を示すと「そ、そこまでは思ってないけど」
