--- a/shared/society/品性.md
+++ b/shared/society/品性.md
@@ -51,3 +51,10 @@
 ただ、全体的には、接していて気分が悪くなる人、というのがわかりやすいか。時代や文化によっても違う。
 
 会話で言葉を選ぼうとすると、レスポンスは遅くなりやすい。
+
+品性を気にしすぎて黙るのは良くない。
+あくまでも品性はコミュニケーションのため。品性のためにコミュニケーションが損なわれるべきではない。
+
+品性こそが善性。
+
+姿勢、所作、言葉遣い、など美しいものに品位を感じる。
