--- a/shared/voice/mechanism/声帯の動き.md
+++ b/shared/voice/mechanism/声帯の動き.md
@@ -84,3 +84,5 @@ https://youtube.com/watch?v=EuYw491guEI&si=KMAh5pWemOLEj4j4
 首の後ろに輪状軟骨を支える筋肉がある。輪状軟骨を支えるとさらに声帯を伸ばしやすくなる。
 
 声帯を閉じておいて、声を出すときに開く感覚で声を出す。
+
+声帯が大きいほど大きく重い音になる。
