--- a/shared/achievement/アウトプット.md
+++ b/shared/achievement/アウトプット.md
@@ -13,3 +13,6 @@
 成果やアウトプットのことばかり考えていると、インプットが疎かになることもあるので注意。
 
 アウトプットというよりも、検証が必要。
+
+何もアウトプットできなかったらインプットする、インプットに飽きたらアウトプットする。
+まず、アウトプットを考える。インプットばかりでは引用ばかりになってしまう。ただの辞書ならネットでいい。
