--- a/shared/discussion/議論.md
+++ b/shared/discussion/議論.md
@@ -99,3 +99,7 @@ Assertion も参照。
 
 議論自体は会議の過程。
 わざわざ議論するのは、何かを決めるため。何も決まらない議論は飲み会とかでやればいい。
+
+議論のメリットは考えが進むこと。新たな考えが手に入ること。できれば全体が新しい知見を手に入れられると一番いい。ただ、あくまでも全体の利益ではなく、個人の利益。考えを進めたいと思ってない人もいる。
+逆に雑談のメリットは空気が良くなること。でも、それに価値を見出さないで、自分の研鑽しか考えてない人もいる。
+結局、この二つは相入れないのかも。
