--- a/shared/joke/冗談.md
+++ b/shared/joke/冗談.md
@@ -12,3 +12,5 @@
 - 「そういうクソ寒いことをウケると勘違いしたまま一生終えるんだろうな、お前は」（『吸血鬼すぐ死ぬ』）
 
 AIに面白いことを喋らせられるか。
+
+小さなジョークを積み重ねることで、ジョークをいう人なんだ、と思われておけばいざという時に「冗談やって」で済ませられる。もちろん信頼関係を築いてない人にまで「冗談やって」って言っても通じないから範囲には気をつけないといけない。ちょっとした失敗を誤魔化しやすくする知恵。
