--- a/shared/people/人柄.md
+++ b/shared/people/人柄.md
@@ -1,3 +1,5 @@
+人柄、人格。
+
 - 考え方
   - 価値観
     - 喜ぶこと
@@ -45,3 +47,6 @@
 考え方というのはそのプロセス。どうしてそう感じたか、どうしてそう思ったか、どうしてそう考えたか。
 
 「なんでそんなとこ覚えてんねん」みたいな話をするのは、話してるのは事実なんだけど、結果として感じ方の個性が出ている。
+
+人格、人柄には考え方と感じ方が含まれるため、意見や感覚を否定するのは当然人格を否定している。
+考え方や感じ方を否定されて人格を否定されたと思わないのなら、それは自分の意見ではないということだ。科学分野からの引用とか。
