--- a/shared/sex/恋人との関係性.md
+++ b/shared/sex/恋人との関係性.md
@@ -1,3 +1,8 @@
 恋人がペットになりたいのか、パートナーになりたいのか、は話しておいた方がいい。その上で、ペットならペットとして、パートナーならパートナーとしての言動を求める。
 
 恋愛のない恋人も考えられる。政略結婚とか。後から恋することも愛することもできる。
+
+恋人には、セックスして子どもを産むために男が女に気を遣って面倒を見るペットみたいな関係と、恋人でありながら気の置ける友人みたいな関係の二つがある。
+
+恋人というのはそもそもペットとして付き合うのが基本。面倒を見る。
+その上で友人のような関係を築けると尚良い。
