--- a/shared/trust/期待感.md
+++ b/shared/trust/期待感.md
@@ -108,3 +108,7 @@ https://youtu.be/8UQrZj8ew88?si=Q4SyTngFg-SdugS1
 一緒にいて良いことが起きそうな期待、あるいは実績。
 
 目立ちたくない、期待が重い、責任が重い、と考えるひとには期待しづらい。
+
+おじさんはその年まで実績がないということ自体に期待感がない。
+
+きょろきょろと落ち着かなくても目が輝いていれば期待感がある。
