--- a/shared/decision/planning/計画.md
+++ b/shared/decision/planning/計画.md
@@ -116,3 +116,8 @@ plan, project, program はどれも計画。
 
 段階を踏むのは論理的だけど、一足飛びに進むような例外にも対処しないといけない。
 計画とか実行の文脈。
+
+計画自体は実行というよりも順序とか優先順位。実行以前に達成の文脈かも。
+
+プログラミングと違って、「実行可能」でなくてもいい。
+単に優先順位が決められているだけでも計画。
