--- a/shared/trust/期待.md
+++ b/shared/trust/期待.md
@@ -69,3 +69,7 @@ UIに不満を感じたら、何かが「期待通りに動いていない」と
 
 期待と信頼はほとんど同義。
 信頼しているということは、良い方に期待しているということ。
+
+期待はするけど良い結果にならなくてもべつにいい、というのは信頼してるのかしてないのか。
+
+期待してもいいけど、期待した結果が出なかったら単に運がなかった、と思うだけでいい。もちろんコストがかかっているなら費用対効果を考えるべきではあるが、期待しない、というのは間違い。
