--- a/shared/voice/training/issues/息が漏れる.md
+++ b/shared/voice/training/issues/息が漏れる.md
@@ -41,3 +41,7 @@ https://youtu.be/mF9WC-tpJfA?si=9fIzpUrmW5R7Gvuj
 
 声帯で息を止めたところから声を出し始めると息漏れしにくい。
 声を出し始めるところで声帯を閉じてから出し始める意識で出す。
+
+息漏れすると雑音が加わって柔らかくなる。ただ、声帯の鳴りが弱くなって軽くなる。
+
+息漏れしてないのが本当の地声だけど、声帯が強く鳴っている重い声を地声と呼ぶ場合もある。
