--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -135,3 +135,5 @@ https://youtu.be/WqCmaGega3Y?si=wkxAh2OGiQgsmFfD
 最初は声帯を伸ばしても鳴るように強い息で。声量の調整は後でいい。
 
 声帯に力が入ると伸びにくくなる。
+
+レミオロメンの粉雪は実はA4までしかない。一昔前は高いと言われていたのに。
