--- a/shared/engagement/支援を受け入れる.md
+++ b/shared/engagement/支援を受け入れる.md
@@ -34,3 +34,5 @@ trust
 惨めに生きている人たちの中には、誰かに助けられると惨めに思って怒る人もいる。悲しき獣。
 
 何かを与えられるためには、与えられる側にも準備ができていないといけない。準備せずに投げられても落としてしまう。
+
+サポーターは、パートナーほど運命共同体ではないけど、支援してくれる人。
