--- a/shared/execution/programming/exception/原則.md
+++ b/shared/execution/programming/exception/原則.md
@@ -79,3 +79,5 @@
 原則から外れるということは、そこだけの例外処理では済まされない。元々の原則から外れて、新しい原則を一から構築しないといけない。
 
 原則はその背後にある前提まで理解していないと時代遅れになる。前提が変わったら判断も変えないといけない。
+
+ルールもプログラム。
